# EML-to-PDF

./: .gitignore  LICENSE  README.md  build.py  eml_to_pdf.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
assets/: README.md  generate_icons.py
eml_to_pdf/: __init__.py  __main__.py  attachment_handler.py  cli.py  config.py  contact_extractor.py  converter.py  gui.py  html_renderer.py  utils.py
scripts/: build_linux.sh  build_macos.sh  build_windows.bat
tests/: test_contact_extractor.py
